# QMikroTikVisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  iplookupgeoip2.cpp  iplookupgeoip2.h  iplookupinterface.cpp  iplookupinterface.h  main.cpp  routerinfohandler.cpp  routerinfohandler.h
resources/pages/: connectionInfo.html  cpuInfo.html  echarts.js  index.html
resources/qml/: CPUInfoPage.qml  ConnectionInfoPage.qml  EchartsView.qml  GridOne.qml  SettingPage.qml  StackViewPage.qml  StatusBar.qml  main.qml
